2006-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Move options marked EXPERIMENTAL to the end of the
	configuration summary printout.  Remove EXPERIMENTAL label from 
	string variables.

2006-06-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/utf8.dem: Issue a 'reset' at the end of the file, as other demos
	 do.

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Use the Symbol to
	Unicode conversion step, as for the enhanced text mode.
	(gp_cairo_enhanced_flush): Small cleanup and fix a forgotten free().

	* term/wxt.trm (TERM_HELP): Document the font requirements properly, in
	particular how the Symbol font is handled and where the fonts are taken
	from. Layout the whole help text so that lines are smaller than 80
	characters.

2006-06-11  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/eval.h: Added number of variables to user defined function struct.

	* src/command.c (define): Recorded number of variables into udf entry.

	* src/parse.c (add_is_udf, is_ud_functin, add_udf): 
	Slight rearranging of functions to allow code reuse.

	* src/parse.c (parse_primary_expression): Check if function used in
	command is user defined.  If so, verify number of variables is correct.

	* src/internal.c (f_call, f_calln): Added tests to catch variable
	mismatch at time of evaluation.

2006-06-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* docs/Mafefile.in (CORETERM): Add wxt.trm in the list of
	terminals.

	* docs/gnuplot.doc : Add mentions of `wxt` among other terminals when
	useful (mouse, raise, lower, image, set_output, fillstyles).

	* src/wxterminal/wxt_gui.cpp:
	Fix compilation with --disable-with-image.

	* src/wxterminal/wxt_gui.h:
	Fix compilation with --disable-with-image.
	Cleanup includes.

	* src/wxterminal/gp_cairo.c
	(gp_cairo_draw_polygon): Replace malloc by gp_alloc.
	(gp_cairo_draw_image): Likewise.
	(gp_cairo_convert_symbol_to_unicode): Likewise.

2006-06-09  Ethan A Merritt  <merritt@u.washington.edu>
